--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Open Graph Meta Tags for WhatsApp -->
+    <meta property="og:title" content="Singles & Young Couples Hangout 🎉" />
+    <meta property="og:description" content="Join us for an exciting event on 15 February! Fun, Networking, Relationship Talks & More. Fee: ₦5,000" />
+    <meta property="og:image" content="https://drive.google.com/file/d/1aJ9SmV1j6AxUCa1T6NWbwgZwpjoqYUyv/view?usp=drive_link" />
+    <meta property="og:url" content="https://yourwebsite.com/" />
+    <meta property="og:type" content="website" />
     <title>Singles & Couples Hangout</title>
     <link rel="stylesheet" href="style.css">
 </head>
