--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Open Graph Meta Tags for WhatsApp -->
     <meta property="og:title" content="Singles & Young Couples Hangout 🎉" />
     <meta property="og:description" content="Join us for an exciting event on 15 February! Fun, Networking, Relationship Talks & More. Fee: ₦5,000" />
-    <meta property="og:image" content="https://drive.google.com/file/d/1aJ9SmV1j6AxUCa1T6NWbwgZwpjoqYUyv/view?usp=sharing" />
+    <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1aJ9SmV1j6AxUCa1T6NWbwgZwpjoqYUyv" />
     <meta property="og:url" content="https://picnic-hangout.vercel.app/" />
     <meta property="og:type" content="website" />
     <title>Singles & Couples Hangout</title>
